--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,8 @@
 <li>
 	{{burger_name}}
 
-	<button class="change-devour" data-id="{{id}}" data-newsleep="{{sleep}}">
-		{{#if sleep}}DEVOUR IT{{else}}WAKE UP!{{/if}}
+	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devoured}}">
+		{{!-- {{#if devour}}DEVOUR IT{{else}}WAKE UP!{{/if}} --}}
+		DEVOUR IT
 	</button>
 </li>
