--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,37 +1,63 @@
-<h1>Burgers!</h1>
+<div class="container">
+    <div class="row head">
+      <div class="col-sm">
+          <h1>Burgers!!</h1>
+      </div>
+                    
+    </div>
 
-<h2>Burgers to eat!</h2>
+<div class="row">
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{!-- {{> burgers/burger-block sleep=true}} --}}
-      {{> burgers/burger-block}}
-    {{/unless}}
-  {{/each}}
-</ul>
+  <div class="col-sm not_eaten">
 
-<h2>Burgers eaten!</h2>
+    <h2>Burgers to eat!</h2>
 
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{!-- {{> burgers/burger-block devour=false}} --}}
-      <li>
-        {{burger_name}}
-      </li>
-      
-    {{/if}}
-  {{/each}}
-</ul>
+    <ul class='list'>
+      {{#each burgers}}
+        {{#unless devoured}}
+          {{> burgers/burger-block}}
+        {{/unless}}
+      {{/each}}
+    </ul>
 
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
   </div>
 
-  <button type="submit">Add Burger</button>
-</form>
+  <div class="col-sm create_burger">
+    <h2>Add a Burger</h2>
+    <form class="create-form">
+
+      <div class="form-group">
+        <label for="ca">Burger Name:</label>
+        <input type="text" id="ca" name="name">
+      </div>
+
+      <button type="submit">Add Burger</button>
+    </form>
+  </div>
+
+  <div class="col-sm eaten">
+    <h2>Burgers eaten!</h2>
+
+    <ul class='list'>
+      {{#each burgers}}
+        {{#if devoured}}
+          <li>
+            {{burger_name}}
+          </li>   
+        {{/if}}
+      {{/each}}
+    </ul>
+
+  </div>
+
+
+
+
+
+
+</div>
+
+
+
+
+</div>
