--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,16 +1,16 @@
 <div class="container">
     <div class="row head">
       <div class="col-sm">
-          <h1>Burgers!!</h1>
+          <img src="/assets/img/burger_42.jpg" alt="burger" class="burg">
       </div>
                     
     </div>
 
 <div class="row">
 
-  <div class="col-sm not_eaten">
+  <div class="col-sm box not_eaten">
 
-    <h2>Burgers to eat!</h2>
+    <h2>Burgers To Eat</h2>
 
     <ul class='list'>
       {{#each burgers}}
@@ -23,20 +23,19 @@
   </div>
 
   <div class="col-sm create_burger">
-    <h2>Add a Burger</h2>
+    
     <form class="create-form">
 
       <div class="form-group">
-        <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" name="name">
+        <input type="text" id="ca" name="name" placeholder="Enter Burger Name">
       </div>
 
-      <button type="submit">Add Burger</button>
+      <button type="submit" class="submit_burger">+Add Burger</button>
     </form>
   </div>
 
-  <div class="col-sm eaten">
-    <h2>Burgers eaten!</h2>
+  <div class="col-sm box eaten">
+    <h2>Burgers Eaten</h2>
 
     <ul class='list'>
       {{#each burgers}}
