--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,6 @@
 	{{burger_name}}
 
 	<button class="change-devour" data-id="{{id}}" data-newdevour="{{devoured}}">
-		{{!-- {{#if devour}}DEVOUR IT{{else}}WAKE UP!{{/if}} --}}
-		DEVOUR IT
+		(DEVOUR IT)
 	</button>
 </li>
